# Spec-Driven-Hackathon-2

./: .gitignore  test_rich_styling.py
.claude/: settings.local.json
Phase-01/: README.md  pyproject.toml  simple_test.py
Phase-01/.claude/: settings.local.json
Phase-01/.specify/memory/: constitution.md
Phase-01/history/prompts/1-console-todo-app/: 1-spec-in-memory-python-todo-app.spec.prompt.md  2-plan-in-memory-todo-app.plan.prompt.md  4-implement-in-memory-todo-app.implement.prompt.md
Phase-01/history/prompts/2-rich-styling/: 1-rich-styling-spec.spec.prompt.md  2-rich-styling-plan.plan.prompt.md  3-rich-styling-tasks.tasks.prompt.md
Phase-01/specs/1-console-todo-app/: data-model.md  plan.md  quickstart.md  spec.md
Phase-01/specs/1-console-todo-app/contracts/: todo-cli-contract.md
Phase-01/specs/2-rich-styling/: plan.md  quickstart.md  spec.md
Phase-01/src/: storage.py
Phase-02/: .gitignore  IMPLEMENTATION_STATUS.md
Phase-02/.claude/: settings.local.json
Phase-02/.specify/memory/: constitution.md
Phase-02/backend/: .env.example  .gitignore  FIXES_APPLIED.md  README.md  requirements.txt
Phase-02/backend/migrations/: 001_create_users_table.sql  002_create_tasks_table.sql  (+1 more)
Phase-02/frontend/: .env.local.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
specs/1-console-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-console-todo-app/: research.md  tasks.md
specs/2-rich-styling/: data-model.md  research.md  tasks.md
src/: commands.py  main.py  theme_handler.py  todos.py
(+96 files in other folders)
