[project]
name = "in-memory-todo-app"
version = "0.1.0"
description = "A console-based todo app that stores all data in memory"
authors = [{name = "Abdul Rafay", email = "rafaynadeem77@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
todo-app = "src.main:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"